--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ description: -- Pensamientos diversos --
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: johnfahrenheit@hotmail.com
   facebook:
   flickr:
   #github: barryclark/jekyll-now
